--- a/styles.css
+++ b/styles.css
@@ -358,10 +358,13 @@ header.sticky {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 15px;
+  color: rgb(241, 236, 229);
+  text-shadow: 1px 1px 1px #000;
 }
 
 .layer p {
-  color: var(--second-color);
+  color: yellow;
+  text-shadow: 1px 1px 1px #000;
   font-size: 1rem;
   line-height: 1.8;
 }
